--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.0.0",
     "react-doc-viewer": "^0.1.5",
-    "react-dom": "s^18.0.0",
+    "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
